--- a/app/src/main/res/menu/menu_demo.xml
+++ b/app/src/main/res/menu/menu_demo.xml
@@ -2,13 +2,13 @@
     xmlns:android = "http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_test_item1"
+        android:id="@+id/menu_play"
         android:title="Play" />
     <item
-        android:id="@+id/menu_test_item2"
+        android:id="@+id/menu_save"
         android:title="Save" />
     <item
-        android:id="@+id/menu_test_item3"
+        android:id="@+id/menu_recent"
         android:title="Recent" />
 
 
